--- a/src/components/code/algorithm/al-theory/pages/elem-train1.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-train1.html
@@ -2,7 +2,7 @@
 
 
 <!-- Содержание -->
-<div class="article">
+<article class="article">
   <h2>Содержание</h2>
   <ol>
     <li>
@@ -184,7 +184,7 @@
       </ol>
     </li>
   </ol>
-</div>
+</article>
 
 
 <!-- Лекция №1. Сложность, тестирование, особые случаи -->
@@ -200,6 +200,7 @@
     <li>Умения тестировать свой код</li>
     <li>Умения писать эффективный код</li>
   </ol>
+
   <p>Задача на собеседовании обычно похожа на олимпиадную задачу по информатике, но на собеседовании задачи обычно простые. Если умеете решать олимпиадные задачи, то алгоритмическую секцию пройдете достаточно легко.</p> 
   
   <h4>Как этого достичь?</h4>
@@ -242,7 +243,7 @@
   <div class="anchor" id="l1-tema-1"></div>
   <h3>Тема 1. Сложность алгоритмов</h3>
 
-  <p>Что такое сложность?</p>
+  <h4>Что такое сложность?</h4>
   <ol>
     <li>Сложность алгоритма - порядок количества действий, которые выполняет алгоритм</li>
     <li>Например, в программе два вложенных цикла, каждый от 1 до N, тогда сложность составляет O(N^2)</li>
