--- a/src/components/code/algorithm/al-theory/pages/elem-train5.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-train5.html
@@ -1,17 +1,64 @@
-<h1>Тренировки по алгоритмам 5.0 (2024.03.29)</h1>
+<h1>Тренировки по алгоритмам 5.0 (2024.03.29) от Яндекс (Михаил Густокашин)</h1>
 
 
 <!-- Содержание -->
-<div class="article">
-  <h2>Содержание</h2>
-  <p><a href="#train">Тренировки по алгоритмам от Яндекс (Михаил Густокашин)</a></p>
-</div>
-
-
-<!-- Тренировки по алгоритмам от Яндекс (Михаил Густокашин) -->
 <article class="article">
-  <div class="anchor" id="train"></div>
-  <h3>Тренировки по алгоритмам от Яндекс (Михаил Густокашин)</h3>
+  <h2>Содержание</h2>
+  <ol>
+    <li>
+      <a href="#l1">Лекция №1. Сложность, тестирование, особые случаи</a>
+      <ol>
+        <li>
+          <a href="#l1-tema-1">Тема 1. Сложность алгоритмов</a>
+          <ul>
+            <li><a href="#l1-task-1">Задача 1. Самый частый символ</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#l1-tema-2">Тема 2. Особые случаи</a>
+          <ul>
+            <li><a href="#l1-task-2">Задача 2. Сумма последовательности</a></li>
+            <li><a href="#l1-task-3">Задача 3. Максимум последовательности</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#l1-tema-3">Тема 3. Тестирование</a>
+        </li>          
+      </ol>
+    </li>
+    <li>
+      <a href="#l2">Лекция №2. Линейный поиск</a>
+      <ol>
+        <li>
+          <a href="#l2-tema-1">Тема 1. Классические задачи линейного поиска</a>
+          <ul>
+            <li><a href="#l2-task-1">Задача 1. Найти первое вхождение</a></li>
+            <li><a href="#l2-task-2">Задача 2. Найти последнее вхождение</a></li>
+            <li><a href="#l2-task-3">Задача 3. Найти максимальное число</a></li>
+            <li><a href="#l2-task-4">Задача 4. Найти максимальное и второе по величине число</a></li>
+            <li><a href="#l2-task-5">Задача 5. Найти минимальное четное число</a></li>
+          </ul>          
+        </li>
+        <li>
+          <a href="#l2-tema-2">Тема 2. Два прохода</a>
+          <ul>
+            <li><a href="#l2-task-6">Задача 6. Самые короткие слова</a></li>
+            <li><a href="#l2-task-7">Задача 7. Сколько воды осталось на острове после сильного дождя</a></li>
+          </ul>
+        </li>          
+        <li><a href="#l2-tema-3">Тема 3. Задача с собеседования. RLE сжатие строки</a> </li>
+      </ol>
+    </li>
+  </ol>
+</article>
+
+
+<!-- Лекция №1. Сложность, тестирование, особые случаи -->
+<article class="article">
+  <div class="anchor" id="l1"></div>
+  <h2>Лекция №1. Сложность, тестирование, особые случаи</h2>
+
+  <p>Здравствуйте, меня зовут Михаил Густокашин. Я преподаю алгоритмы и структуры данных на факультете компьютерных наук в высшей школе экономики. А сейчас у нас тренировки по алгоритмам уже пятый сезон. И сейчас я расскажу что нас ждет и как все будет устроено.</p>
 
   <p>Чего хотят на алгоритмическом собеседовании (и в реальной жизни)?</p>
   <ol>
@@ -19,7 +66,83 @@
     <li>Умения тестировать свой код</li>
     <li>Умения писать эффективный код</li>
   </ol>
+  
+  <h4>Как этого достичь?</h4>
+  <ol>
+    <li>Написать 10 000 строк работающего, эффективного и протестированного кода</li>
+    <li>Кроме тренировок можно найти задачи на coderun.yandex.ru, leetcode.com, codeforces.com и т.п.</li>
+    <li>Наш курс поможет правильно подходить к решению задач</li>
+  </ol>
 
+  <h4>План занятий</h4>
+  <ol>
+    <li>Сложность, тестирование, особые случаи</li>
+    <li>Ллинейный поиск</li>
+    <li>Множества и словари</li>
+    <li>Бинарный поиск</li>
+  </ol>
+
+  <h4>Рейтинг</h4>
+  <ol>
+    <li>К каждому занчтию - домашнее задание с 10 задачами и дедлайном до разбора</li>
+    <li>На разборе смотрим решение некоторых задач, в том числе с кодом</li>
+    <li>Кто решил больше задач - тот и молодец, штраф не учитывается</li>
+  </ol>
+
+  <h4>Бонусы</h4>
+  <ol>
+    <li>Знания и умения!</li>
+    <li>Собеседование по алгоритмам в прямом эфире + его разбор (дважды)</li>
+    <li>Персональные тренировки для топ-200 участников</li>
+    <li>Пробные алгоритмические собеседования для топ-200 участников с зачетом при отборе</li>
+  </ol>
+
+  <h4>Содержание сегодняшней лекции</h4>
+  <ol>
+    <li>Сложность алгоритмов</li>
+    <li>Особые случаи</li>
+    <li>Тестирование</li>
+  </ol>
+</article>
+
+
+<!-- Тема 1. Сложность алгоритмов -->
+<article class="article">
+  <div class="anchor" id="l1-tema-1"></div>
+  <h3>Тема 1. Сложность алгоритмов</h3>
+
+  <h4>RAM машина (упрощенно)</h4>
+  <ol>
+    <li>Чтение/запись/инициализация ячейки памяти стоит одну операцию</li>
+    <li>Можно выполнять арифметические и логические операции с одной ячейкой памяти, а также переходы</li>
+    <li>Похоже на компьютер</li>
+  </ol>
+  
+  <h4>Сложность алгоритма</h4>
+  <ol>
+    <li>Сложность алгоритма - порядок количества действий в зависимости от размера входных данных</li>
+    <li>Чато применяют О-нотацию - нестрогая оценка сверху</li>
+    <li>Суть: хотим понимать во сколько раз замедлится наша программа при увеличении размера входных данных</li>
+  </ol>
+
+  <h4>Примеры расчета сложности</h4>
+  <ol>
+    <li>У нас есть реализация алгоритма в виде программы. При размере входных данных N время работы программы было измерено и составило T. Данные увеличились в 10 раз</li>
+    <li>Если сложность O(N) - замедление в 10 раз, O(NlogN) - примерно в 30 раз, O(N^2) - в 100 раз, O(N^3) - в 1000 раз, O(1) - нет замедления.</li>
+  </ol>
+
+  <h4>Замечание про константу</h4>
+  <ul>
+    <li>То во сколько раз замедлится программа не зависит от константы (количества элементарных операций, не зависящих от размера входных данных)</li>
+  </ul>
+
+  <p>Может быть разное замедление в разных частях программы. Мы должны учитывать самый худший случай.</p>
+</article>
+
+
+<!-- Задача 1. Самый частый символ -->
+<article class="article">
+  <div class="anchor" id="l1-task-1"></div>
   <h3>Задача 1. Самый частый символ</h3>
   <p>Дана строка (в кодировке UTF-8), найти самый часто встречающийся в ней символ. Если таких символов несколько - найти любой.</p>
 
@@ -31,12 +154,108 @@
 
   <p>Решение 3. O(n+k) = O(n)</p>
   <p>Заведем словарь, где ключом является символ, а значением - сколько раз он встретился. Если символ встретился впервые - создаем элемент словаря с ключом, совпадающим с этим символом и значением ноль. Прибавляем к элементу словаря с ключом, совпадающим с этим символом, единицу</p>
+</article>
 
-  <h3>Задача 2. Максимальный элемент</h3>
+
+<!-- Тема 2. Особые случаи -->
+<article class="article">
+  <div class="anchor" id="l1-tema-2"></div>
+  <h3>Тема 2. Особые случаи</h3>
+</article>
+
+
+<!-- Задача 2. Сумма последовательности -->
+<article class="article">
+  <div class="anchor" id="l1-task-2"></div>
+  <h3>Задача 2. Сумма последовательности</h3>
+
+  <p>Дан массив чисел. Найти их сумму.</p>
+
+  <details>
+    <summary>Решение</summary>
+  <p>Мы помним, что пустые строки, последовательности, массивы это страшная вещь и мы стараемся их сразу обработать чтобы ничего не сломалось. Пишем, если длина массива 0 то сразу возвращаем 0, иначе просуммируем все числа.</p>
+<pre>function sum(nums) {
+  if (nums.length === 0) {
+    return 0;
+  } else {
+    let result = nums[0];
+    for (let i = 1; i &lt; nums.length; i++) {
+      result += nums[i];
+    }
+    return result;
+  }
+}</pre>
+
+  <p>Но в данном случае это уже было лишнее. Потому что if можно убрать и сразу инициализировать результат нулем.</p>
+
+<pre>function sum(nums) {
+  let result = 0;
+  for (let i = 0; i &lt; nums.length; i++) {
+    result += nums[i];
+  }
+  return result;
+}</pre>
+  </details>
+</article>
+
+
+<!-- Задача 3. Максимум последовательности -->
+<article class="article">
+  <div class="anchor" id="l1-task-3"></div>
+  <h3>Задача 3. Максимум последовательности</h3>
   <p>Найти максимальный элемент в массиве.</p>
 
   <p>Решение.</p>
   <p>Сначала нужно в ответ положить нулевой элемент массива. Потом пройтись по всем элементам массива и сравнивая их с ответом, присвоивать ответу большее значение. В конце надо вернуть ответ.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Мы помним, что для нахождения суммы последовательности мы сначала в результат записывали 0, а потом вычисляли сумму.</p>
+<pre>function max(nums) {
+  let result = 0;
+  for (let i = 0; i &lt; nums.length; i++) {
+    if (nums[i] &gt; result) {
+      result = nums[i];
+    }
+  }
+  return result;
+}</pre>
+    <p>Это будет работать, пока не возникнет ситуация, когда все числа будут отрицательные. Мы выведем 0, которого даже нет в последовательности. Поэтому обработаем этот случай, если последовательность пустая, то выведем, например, пустую строку.</p>
+<pre>function max(nums) {
+  if (nums.length === 0) {
+    return '';
+  } else {
+    let result = nums[0];
+    for (let i = 1; i &lt; nums.length; i++) {
+      if (nums[i] &gt; result) {
+        result = nums[i];
+      }
+    }
+    return result;
+  }
+}</pre>
+  </details>
+</article>
+
+
+<!-- Тема 3. Тестирование -->
+<article class="article">
+  <div class="anchor" id="l1-tema-3"></div>
+  <h3>Тема 3. Тестирование</h3>
+
+  <h4>Что нужно тестировать?</h4>
+  <ol>
+    <li>Тесты из условия (если есть)</li>
+    <li>Общие случаи</li>
+    <li>Особые случаи</li>
+  </ol>
+</article>
+
+
+<!-- Лекция №2. Линейный поиск -->
+<article class="article">
+  <div class="anchor" id="l2"></div>
+  <h2>Лекция №2. Линейный поиск</h2>
 
   <h3>Задача 3. Второй по величине элемент</h3>
   <p>Найти второе по величине число (такое, которое будет максимальным, если вычеркнуть из последовательности одно максимальное число)</p>
