--- a/src/components/code/algorithm/al-theory/pages/elem-ya-alg-kurs-pay.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-ya-alg-kurs-pay.html
@@ -277,6 +277,42 @@ for (let i = 0; i &lt; people; i++) {
 <article class="article">
   <div class="anchor" id="tema-1-urok-3"></div>
   <h2>Тема 1. Урок 3. Логарифмическая зависимость</h2>
+
+  <p>Чтобы изучать алгоритмы дальше, нужно вспомнить, что такое логарифм и экспонента.</p>
+  <p>Логарифм числа b по основанию a - это показатель степени, в которую нужно возвести a, чтобы получить b</p>
+  <p>x = log<sub>a</sub>(b) можно вычислить, решив уравнение a<sup>x</sup> = b.</p>
+  <p>Например, log<sub>2</sub>(8) будет равен трем, ведь чтобы получить восемь, нужно возвести два в третью степень. Просто, не правда ли?</p>
+  <code>10<sup>2</sup> = 100 , log<sub>10</sub>100 = 2</code>
+  <code>10<sup>3</sup> = 1000 , log<sub>10</sub>1000 = 3</code>
+  <code>2<sup>3</sup> = 8 , log<sub>2</sub>8 = 3</code>
+  <code>2<sup>4</sup> = 16 , log<sub>2</sub>16 = 4</code>
+  <code>2<sup>5</sup> = 32 , log<sub>2</sub>32 = 5</code>
+
+  <p>Но зачем вообще нужны логарифмы? Если вам кажется, что они не встречаются в повседневной жизни, то это не так!</p>
+  <p>Без логарифмов не обойтись в навигации. Мореплаватели применяют их, чтобы прокладывать курс, учитывая расстояние до порта назначения, скорость ветра и течения, кривизну поверхности Земли и другие факторы.</p>
+  <p>В астрономии тоже применяют логарифмы. Делая сложные расчеты, приходится одновременно учитывать огромные расстояния между объектами, их взаимное расположение, светимость и массу, а также различные коэффициенты для планет и звезд.</p>
+  <p>Можно привести и более бытовой пример. Одну и ту же разницу звукового давления между тихими звуками заметить проще, чем между громкими. Например, в соседней комнате телевизор может работать так тихо, что слов не разобрать. Но стоит немного прибавить звук, и вы отчетливо услышите, о чем говорят в эфире. А если на рок-концерте бас-гитара зазвучит громче на такую же величину, на какую прибавили громкость телевизора, зрители разницы не заметят. Дело в том, что интенсивность восприятия прямо пропорциональна натуральному логарифму силы раздражителя. Этот закон получил названия Вебера-Фехнера.</p>
+  <p>Далековато от программирования? В IT-сфере логарифмы тоже применяют! Функциями, которые их содержат, выражают эффективность многих распространенных алгоритмов. С такими алгоритмами вы будете часто встречаться в курсе.</p>
+  <p>Представьте, что ищете слово в словаре. Вряд ли вы станете листать страницу за страницей, начиная с первой, - ведь слова отсортированы по алфавиту. Лучше открыть книгу примерно посередине. Если же слово находится раньше открытой страницы, вы откроете словарь примерно в середине первой половины, а если после - в середине второй. И так до окончания поиска.</p>
+  <p>Если страниц в словаре 100, и вы воспользуетесь предложенным алгоритмом, достаточно будет просмотреть максимум семь страниц.</p>
+  <p>Это логарифм по основанию два от 100. На самом деле log<sub>2</sub>(100) примерно равен 6,64, но нас интересуют целые числа, так как число просмотров не может быть дробным.</p>
+  <p>Разберемся, почему получается именно логарифм.</p>
+  <p>Если страниц 100, то делить пополам, пока не дойдем до одной страницы, нужно максимум 7 раз. Каждый раз объем книги уменьшается вдвое, пока не получится всего одна страница. Можно развернуть алгоритм в обратную сторону. Имея одну страницу, нужно за какое-то количество итераций получить 100, на каждом шаге увеличивая объем вдвое.</p>
+  <p>Такой алгоритм поиска экономит время по сравнению с вариантом, где вы пролистываете словарь с первой страницы.</p>
+  <p>Этот алгоритм называется бинарным поиском. Далее вы еще не раз с ним встретитесь.</p>
+
+  <h4>Основные формулы при работе с логарифмами</h4>
+  <code>log<sub>a</sub>(n<sup>k</sup>) = k*log<sub>a</sub>(n)</code>
+  <code>log<sub>a</sub>(n * m) = log<sub>a</sub>(n) + log<sub>a</sub>(m)</code>
+  <code>n<sup>log<sub>a</sub>(b)</sup> = b<sup>log<sub>a</sub>(n)</sup></code>
+  <code>log<sub>a</sub>(n) *  log<sub>b</sub>(a)= log<sub>b</sub>(n)</code>
+
+  <h4>Задача. Сколко раундов прошла Рита</h4>
+  <p>Рита занимается большим теннисом и собирается участвовать в турнире. Всего в нем 256 игроков. По правилам проигравший выбывает из соревнования, а победитель выходит в следующий раунд, где встречается с другим победителем предыдущего раунда. И так до четвертьфинала, полуфинала и финала, где два последних игрока борются за звание чемпиона.</p>
+  <p>Сколько раундов прошла Рита, если дошла до финала? Сам финал считать не нужно.</p>
+  <p>Каждый раунд количество игроков будет уменьшаться вдвое. В последнем раунде останутся два тенесиста, которые сыграют один матч, а в первом раунде будет всего 128 матчей. На каждом шаге их количество уменьшается вдвое. Таким образом, нужно найти log<sub>2</sub>(128), что равно 7.</p>
+  <p>Сколько матчей будет сыграно в турнире из предыдущего вопроса?</p>
+  <p>В первом раунде будет сыграно 128 матчей, ведь разбив 256 игроков по парам получим 128. Из каждого матча лишь один игрок перейдет на следующий этап. Значит, в следующем круге окажутся 128 человек. Разделим их по парам и получим 64 матча. Так же нужно считать до финала, где будут играть 2 теннисиста. Чтобы вычислить общее количество матчей, нужно сложить их число на каждом этапе: 128 + 64 + 32 + 16 + 8 + 4 + 2 + 1 = 255</p>
 </article>
 
 
@@ -284,6 +320,8 @@ for (let i = 0; i &lt; people; i++) {
 <article class="article">
   <div class="anchor" id="tema-1-urok-4"></div>
   <h2>Тема 1. Урок 4. Экспоненциальная зависимость</h2>
+
+  <p>Прошлый урок был посвящен логарифмам. Теперь перейдем к экспоненте.</p>
 </article>
 
 
