--- a/src/components/code/code-css/pages/elem-css.html
+++ b/src/components/code/code-css/pages/elem-css.html
@@ -13,6 +13,12 @@
   <p><a href="#spec">Специфичность</a></p>
   <p><a href="#box">Блочная модель</a></p>
   <p><a href="#pseudo-elem">Псевдоэлементы</a></p>
+  <p><a href="#pseudo-class">Псевдоклассы</a></p>
+  <p><a href="#inherit">Наследование</a></p>
+  <p><a href="#transition">Переходы</a></p>
+  <p><a href="#animation">Анимация</a></p>
+  <p><a href="#position">Позиционирование</a></p>
+  <p><a href="#overflow">Переполнение</a></p>
 </article>
 
 
@@ -28,6 +34,7 @@
   <p><a href="http://www.csszengarden.com/">csszengarden.com</a> The beauty of CSS</p>
   <p><a href="https://doka.guide/css/specificity/">doka.guide/css/specificity</a> Специфичность</p>
   <p><a href="https://htmlacademy.ru/blog/css/which-selector">htmlacademy.ru/blog/css/which-selector</a> Специфичность селекторов в CSS</p>
+  <p><a href="https://animista.net/">animista.net</a> Анимации в CSS</p>
 
   <h3>Статьи</h3>
   <p><a href="https://web-standards.ru/articles/position-sticky/">Как на са­мом деле ра­бо­та­ет position: sticky в CSS</a> (ЭЛАД ШЕХТЕР 2019-01-31)</p>
@@ -176,13 +183,24 @@
   <h2>Специфичность</h2>
 
   <p>Когда к одному элементу на странице прописываются стили в разных строчках css файла, то браузер принимает решение на основе специфичности селектора.</p>
-  <p>Встроенные стили (inline) всегда важнее внешних, поэтому специфичность считается внутри тега style и во внешнем css файле</p>
-  <p>Вес селектора складывается из трех цифр</p>
-  <ol>
-    <li>Селекторы по идентификатору (id)</li>
-    <li>Селекторы по классу (class), селекторы по аттрибуту и селекторы с псевдоклассами</li>
-    <li>Селекторы по тегу, селеткторы с псевдоэлементами</li>
-  </ol>
+  <p>У каждого селектора есть вес. К элементу применяются стили того селектора, вес которого больше.</p>
+  <p>Если вес селектора одинаковый, то применяется тот, который записан последним.</p>
+
+  <h4>Вес селектора складывается из трех цифр</h4>
+  <ul>
+    <li>1000 Селекторы по идентификатору (#id)</li>
+    <li>100 Селекторы по классу (.class), по псевдоклассу (:pseudoclass), по аттрибуту ([attribute] или [attribute="value"])</li>
+    <li>10 Селекторы по элементу (tagName), по псевдоэлементу (::pseudoelement)</li>
+  </ul>
+
+  <h4>Псевдоклассы :not и :is не влияют на специфичность</h4>
+  <p>При этом, учитываются селекторы внутри них (внутри скобок)</p>
+
+  <h4>Встроенные стили</h4>
+  <p>Встроенные стили (inline) всегда важнее стилей, записанных в селекторах - в теге style или во внешем файле css. Поэтому применяются всегда встроенные стили, если они есть.</p>
+  <p>Но есть один способ переопределить встроенные стили и стили любого другого селектора. Нужно добавить ключевое слово !important в конце объявления.</p>
+  <code>h1 { color: red !important; }</code>
+  <p>Использование этого метода считается плохой практикой, так как он отменяет правила специфичности</p>
 </article>
 
 
@@ -238,5 +256,285 @@
   <p>Стилизация плейсхолдера в текстовом поле ввода. Во всех текстовых полях ввода плейсхолдер станет зеленый и курсивный.</p>
   <code>input::placeholder { color: green; font-style: italic }</code>
 </article>
+
+
+<!-- Псевдоклассы -->
+<article class="article">
+  <div class="anchor" id="pseudo-class"></div>
+  <h2>Псевдоклассы</h2>
+
+  <p>Псевдоклассы - это ключевые слова, которые позволяют стилизовать элементы в зависимости от их состояния.</p> 
+  <p>Они также позволяют стилизовать элементы в зависимости от их расположения на HTML странице.</p>
+  <p>Они добавляются в конце селектора, чтобы придать элементу стиль, основанный на его состоянии или местоположении.</p>
+  <p>Применение стилей при наведении указателя мыши на элемент</p>
+  <code>h1:hover { color: red; }</code>
+
+  <p>Применение стилей для кнопки в отключенном состоянии</p>
+  <code>button:disabled { border: none };</code>
+
+  <p>Применение разных стилей зависимо от валидности введенных в них данных</p>
+  <code>input:invalid { color: red; }</code>
+  <code>input:valid { color: green; }</code>
+
+  <p>Первый дочерний элемент списка</p>
+  <code>li:first-child { color: green; }</code>
+
+  <p>Последний дочерний элемент списка</p>
+  <code>li:last-child { color: blue; }</code>
+
+  <p>Второй дочерний элемент списка</p>
+  <code>li:nth-child(2) { color: red; }</code>
+
+  <p>Все четные строки таблицы</p>
+  <code>tr:nth-child(even) { background-color: gray; }</code>
+
+  <p>Все нечетные строки таблицы</p>
+  <code>tr:nth-child(odd) { background-color: white; }</code>
+
+  <p>Псевокласс отрицания. Выбирем элементы h1, у которых нет класса с именем default</p>
+  <code>h1:not(.default) { color: darkmagenta; }</code>
+</article>
+
+
+<!-- Наследование -->
+<article class="article">
+  <div class="anchor" id="inherit"></div>
+  <h2>Наследование</h2>
+
+  <ul>
+    <li>Некоторые свойства наследуются от родительского элемента.</li>
+    <li>Наследование позволяет повторно использовать стили, установленные для родительского элемента или любого из элементов-предков.</li>
+    <li>Не все свойства наслдуются. Как правило, наследуется большинство свойств, связанных с типографикой.</li>
+    <li>Именно потому установка такого свойства, как font-family, для элемента body или html изменяет шрифт для всей веб-страницы.</li>
+  </ul>
+
+  <h3>Принудительное наследование</h3>
+  <p>Ключевое свойство <strong>inherit</strong> позволяет наследовать от родителя свойства, которые не наследуются по умолчанию</p>
+  <code>span { border: inherit; }</code>
+
+  <h3>Отмена наследования</h3>
+  <p>Ключевое свойство <strong>initial</strong> устанавливает значение по умолчанию</p>
+  <code>span { color: initial; font-size: initial; }</code>
+
+  <h3>Наследование всех свойств</h3>
+  <p>Свойство <strong>all</strong> со значением <strong>inherit</strong> устанавливает наследование для всех свойств</p>
+  <code>all: inherit;</code>
+
+  <h3>Отмена наследования всех свойств</h3>
+  <p>Свойство <strong>all</strong> со значением <strong>initial</strong> устанавливает значение по умолчанию для всех свойств</p>
+  <code>all: initial;</code>
+</article>
+
+
+<!-- Переходы -->
+<article class="article">
+  <div class="anchor" id="transition"></div>
+  <h2>Переходы</h2>
+
+  <p>HTML элементы могут иметь различные состояния при смене которых может изменяться, например, цвет элемента</p>
+  <p>Переходы позволяют определить, как элемент переходит из одного состояния в другое</p>
+
+  <h4>Создание перехода</h4>
+  Для создания перехода нужно задать 2 свойства
+  <ol>
+    <li>Свойство <strong>transition-property</strong> со значением того свойства элемента на котором будет создан переход
+      <code>transition-property: background-color;</code>
+      Можно создать переход на всех свойствах сразу
+      <code>transition-property: all;</code>
+      Как правило, все свойства, которые могут иметь промежуточное состояние, могут подвергаться переходу.
+      Например, свойство font-family не может подвергнуться переходу, потому что у него нет промежуточного состояния. Для цвета есть промежуточное состояние и мы можем изменять его плавно. Размеры тоже можно изменять плавно.
+    </li>
+    <li>Свойство <strong>transition-duration</strong> со значением длительности перехода
+      <code>transition-duration: 1s;</code>
+    </li>
+  </ol>
+  
+  <h4>Свойство transition-timing-function</h4>
+  <p>Свойство <strong>transition-timing-function</strong> определяет временную функцию для скорости перехода в разный момент времени. По-умолчанию скорость линейная, свойство равно linear. Но мы можем задать любую другую.</p>
+  <code>transition-timing-function: ease;</code>
+
+  <h4>Свойство transition-delay</h4>
+  <p>По-умолчанию смена состояний происходит мгновенно. Но мы можем задать задержку перед началом перехода.</p>
+  <code>transition-delay: 2s;</code>
+
+  <h4>Свойство transition это сокращение для 4 свойств</h4>
+  <code>transition: all 0.8s linear 2s;</code>
+  <ol>
+    <li><h4>transition-property</h4></li>
+    <li><h4>transition-duration</h4></li>
+    <li><h4>transition-timing-function</h4></li>
+    <li><h4>transition-delay</h4></li>
+  </ol>
+</article>
+
+
+<!-- Анимация -->
+<article class="article">
+  <div class="anchor" id="animation"></div>
+  <h2>Анимация</h2>
+
+  <p>CSS позволяет анимировать различные HTML элементы путем анимации различных CSS свойств.</p>
+  <p>Анимация позволяет выделить интерактивные элементы</p>
+  <p>Анимация позволяет улучшить дизайн веб-страницы и повысить уровень восприятия контента пользователями</p>
+
+  <h4>Создание анимации</h4>
+  <ul>
+    <li><strong>@keyframes</strong> - ключевое слово</li>
+    <li><strong>move</strong> - имя анимации, выбирается произвольно</li>
+    <li><strong>from</strong> - стили в начале анимации</li>
+    <li><strong>to</strong> - стили в конце анимации</li>
+  </ul>
+  <p>Переместим элемент по оси X (первое значение) и по оси Y (второе значение). (0,0) это координаты левого верхнего угла.</p>
+<pre>@keyframes move {
+  from {
+    translate: 0px 0px;
+  }
+  to {
+    translate: 200px 200px;
+  }
+}</pre>
+
+  <h4>Применение анимации</h4>
+  <code>animation-name: move</code>
+  <code>animation-duration: 3s</code>
+  <code>animation-timing-function: ease-in-out</code>
+
+
+  <h4>Повторение анимации</h4>
+  <p>По-умолчанию анимация повторяется 1 раз. Но можно задать число повторений или бесконечную анимацию.</p>
+  <code>animation-iteration-count: 5;</code>
+  <code>animation-iteration-count: infinite;</code>
+
+
+  <h4>Задержка анимации</h4>
+  <p>По-умолчанию анимация начинается сразу, без задержки. Но можно задать время задержки перед началом анимации.</p>
+  <code>animation-delay: 2s;</code>
+
+  <h4>Направление анимации</h4>
+  <p>По-умолчанию анимация воспроизводится в обычном направлении и свойство animaion-direction равно normal. Пожно выбрать другое направление</p>
+  <code>animaion-direction: reverse;</code>
+  <code>animaion-direction: alternate;</code>
+
+  <h4>Сокращенное свойство animation</h4>
+  <code>animation: move 3s ease 2s infinite alternate;</code>
+
+  <h4>Плавное изменение прозрачности</h4>
+<pre>@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.element {
+  animation: fadeIn 1s ease-in;
+}</pre>
+
+  <h4>Вращение</h4>
+  <p>Бесконечное вращение с одинаковой скоростью (линейной).</p>
+<pre>@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.element {
+  animation: rotate 2s infinite linear;
+}</pre>
+  
+  <h4>Увеличение размеров</h4>
+<pre>@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+button:hover {
+  animation: pulse 1s ease;
+}</pre>
+</article>
+
+
+<!-- Позиционирование -->
+<article class="article">
+  <div class="anchor" id="position"></div>
+  <h2>Позиционирование</h2>
+
+  <p>По-умолчанию элементы размещаются на веб-странице один за другим согласно их местам в html документе.</p>
+  <p>Используя CSS свойство position можно изменить расположение любого элемента на веб странице</p>
+  <p>Свойство position может принимать одно из 5 значений</p>
+  <ol>
+    <li>
+      <h4>static (по-умолчанию)</h4>
+      <code>position: static;</code>
+      <p>Элементы распологаются в соответствии со структурой HTML документа</p>
+    </li>
+    <li>
+      <h4>relative</h4>
+<pre>.element {
+  position: relative;
+  top: 30px;
+  left: 50px;
+}</pre>
+  <p>Относительная позиция используется вместе с top, left, right или bottom для перемещения элемента относительно его стандартной позиции. Остальные элементы ведут себя так, как будто элемент остался на своем месте и занимает его.</p>
+    </li>
+    <li>
+      <h4>absolute</h4>
+      <code>position: absolute;</code>
+      <p>Элемент может перекрывать другие элементы. Остальные элементы ведут себя так, как будто элемента нет на странице. Они о нем ничего не знают.</p>
+      <p>Элемент с абсолютной позицией можно перемещать используя top, left, right или bottom, относительно ближайшего родительского элемента, имеющего не статическую позицию.</p>
+    </li>
+    <li>
+      <h4>fixed</h4>
+      <code>position: fixed;</code>
+      <p>В фиксированной позиции элемент остается неподвижным на веб-странице даже при прокрутке страницы. Потому что он позиционируется относительно окна браузера.</p>
+      <p>Элемент с фиксированной позицией можно перемещать используя top, left, right или bottom, относительно области просмотра (видимой области веб-страницы).</p>
+    </li>
+    <li>
+      <h4>sticky</h4>
+      <code>positionL sticky;</code>
+      <p>Липкая позиция - это гибрид между относительной и фиксированной позицией.</p>
+      <p>Элемент будет иметь относительную позицию, пока веб-страница не будет прокручена до определенного момента, после чего он уже будет иметь фиксированную позицию.</p>
+      <p>Порог, после которого элемент становится фиксированным, задается с помощью свойств top, right, left или bottom.</p>
+    </li>
+  </ol>
+</article>
+
+
+<!-- Переполнение -->
+<article class="article">
+  <div class="anchor" id="overflow"></div>
+  <h2>Переполнение</h2>
+
+  <p>Содержимое элемента может выйти за его границы, если его размеры меньше, чем размер его содержимого.</p>
+  <p>По-умолчанию содержимое отображается за рамками элемента-контейнера.</p>
+
+  <h4>Свойство overflow</h4>
+  <p>Свойство overflow управляет переполнением контента и может принимать одно из двух значений</p>
+  <ol>
+    <li>
+      <h4>hidden</h4>
+      <code>overflow: hidden;</code>
+      Скрывает переполненный контент.
+    </li>
+    <li>
+      <h4>auto</h4>
+      <code>overflow: auto;</code>
+      Показывает полосы прокрутки в элементе контейнера, если содержимое его переполняет.
+    </li>
+  </ol>
+</article>
+
 
 
