--- a/src/components/code/code-js/js-corejs/pages/elem-promise-task.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-promise-task.html
@@ -620,7 +620,7 @@ setTimeout(() => {
 }, 0);
 console.log(2);
 console.log(4);
-// 1, 2, 3</pre>
+// 1, 2, 4</pre>
   <p>Выведется 1 , 2  и 4 .</p>
 
   <p>Затем выполните микрозадачу:</p>
@@ -750,11 +750,11 @@ const promise2 = Promise.resolve().then(() => {
 // timer1</pre>
       <p>Примечание. На этом шаге макрозадача добавляет в очередь задач новую микрозадачу.</p>
     </li>
-    <li>4. Выполним все вновь добавленные микрозадачи:
+    <li>Выполним все вновь добавленные микрозадачи:
 <pre>console.log('promise2')
 // promise2</pre>
     </li>
-    <li>5. Выполним следующую макрозадачу:
+    <li>Выполним следующую макрозадачу:
 <pre>console.log('timer2')
 // timer2</pre>
     </li>
