--- a/src/components/code/code-js/js-theory/pages/elem-prototype.html
+++ b/src/components/code/code-js/js-theory/pages/elem-prototype.html
@@ -110,7 +110,7 @@ console.log( count.__proto__ )
     </li>
     <li>
       Аналогично строка.
-      <code>let age = 18 // age.__proto__</code>
+      <code>let str = 'qwert' // str.__proto__</code>
     </li>
     <li>
       Аналогично булевое значение.
