--- a/src/components/code/code-js/js-theory/pages/elem-scope.html
+++ b/src/components/code/code-js/js-theory/pages/elem-scope.html
@@ -1,5 +1,9 @@
 <h1>Scope</h1>
 
+<article class="article">
+  <p><a href="elem-scope-tasks" class="scope-links">Задачи на Scope</a></p>
+</article>
+
 <!-- Заголовок -->
 <div class="article">
   <div class="anchor" id="content"></div>
