--- a/src/scss/_aside.scss
+++ b/src/scss/_aside.scss
@@ -18,6 +18,10 @@ Aside
     text-decoration: none;
     color: #fff;
   }
+
+  & a:hover {
+    animation: horiz 1.5s linear infinite;
+  }
 }
 
 
@@ -34,12 +38,21 @@ Aside
   }
 }
 
-
-//мобильная версия
-// @media (max-width: 580px) {
-//   .aside {
-//     display: none;
-//   }
-// }
-
+@keyframes horiz {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-2px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(2px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 /* Конец Aside */
