--- a/src/components/btn-up/btn-up.scss
+++ b/src/components/btn-up/btn-up.scss
@@ -13,6 +13,19 @@
   transition: opacity 1s;
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .btn-up:hover {
   opacity: 100%;
+  animation: pulse 0.7s linear infinite;
 }
