--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -27,8 +27,8 @@ nav
     box-shadow: 4px 6px #222;
   }
 
-  & a.active {
-    font-size: 1.5em;
+  & a:hover {
+    animation: vert 1.5s linear infinite;
   }
 }
 
@@ -49,6 +49,48 @@ nav
       border-radius: 5px;
       box-shadow: 4px 6px #222;
     }
+  }
+}
+
+nav-component .nav {
+  & a:hover {
+    animation: pulse 1.5s linear infinite;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.05);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes vert {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-2px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(2px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 
